added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The meta element contains metadata for the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The h1-6 elements are used as headers, only use h1 once.</li>
+        </ul>
+        </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li> CSS notes go here.</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li> Git is a funny version control system that is utilized in tandom with github.</li>
+          <li> git status: a command that lists the current working branch.</li>
+          <li> Branches are used for teams to develop simultaneously. Use git checkout -b new-branch-name to make a new branch and switch to it.</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li> JavaScript notes go here.</li>
+        </ul>
+      </section>
+
     </main>
 
     <footer>
