--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li> JavaScript notes go here.</li>
+          <li> Notes? who needs those.</li>
         </ul>
       </section>
 
